# formal-lang-course

./: .gitignore  .pre-commit-config.yaml  Untitled0.ipynb  pyproject.toml
.github/workflows/: code_style.yml  tests.yml
project/: language.md  main.py
project/automata/: automata.py
project/parser/: Language.g4  language.md  parser.py
project/utils/: automata.py  boolean_decomposition.py  cfg.py  cfpq.py  ecfg.py  graphs.py  rpq.py  rsm.py
scripts/: run_tests.py
tasks/: task3.md
tests/: helpers.py
tests/parser/: test_parser.py
tests/parser/resources/: parser.yaml
tests/utils/: expected_two_cycles_graph.dot  test_automata.py  test_cfg.py  test_cfpq.py  test_ecfg.py  test_graphs.py  test_rpq.py  test_rsm.py
tests/utils/resources/: cfg.yaml  cfpq.yaml  rpq.yaml  rpq_with_constraint.yaml  rsm.yaml
